--- a/Memoria/capitulos/03_Requisitos.tex
+++ b/Memoria/capitulos/03_Requisitos.tex
@@ -66,7 +66,7 @@ Las principales funciones que el usuario podrá realizar dentro de la aplicació
 \begin{itemize}
 \item Selección de lecciones a aprender.
 \item Respuesta (mediante selección o escritura) de las preguntas y actividades que ofrezca la aplicación.
-\item Consulta del progreso individual, de los logros obtenidos y de la clasifiación global.
+\item Consulta del progreso individual y de los logros obtenidos.
 \item Modificación de los datos del perfil.
 \end {itemize}
 
@@ -86,6 +86,9 @@ Por último, el administrador, además de las funcionalidades del encargado/prof
     \item Borrado de usuarios
     \item Creación de nuevas lecciones
     \item Borrado de lecciones
+    \item Creación de nuevos logros
+    \item Modificación de los datos de los logros
+    \item Borrado de logros
 \end{itemize}
 
 \subsection{Características de los usuarios}
