--- a/Memoria/capitulos/07_Implementacion.tex
+++ b/Memoria/capitulos/07_Implementacion.tex
@@ -682,7 +682,7 @@ La vista de esta pantalla consiste en un distribuidor de columnas (Column) que c
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.44\textwidth]{imagenes/c7/historialtest.png}
-  \caption{Pantalla de dashboard del profesor con las opciones de gestión disponibles para el profesor.}
+  \caption{Pantalla de dashboard del profesor con las opciones de gestión disponibles para el administrador.}
   \label{fig:login}
 \end{figure}
 
@@ -777,7 +777,7 @@ Un dashboard es una interfaz de usuario que muestra información de forma resumi
 
 \begin{figure}[H]%
   \centering
-  \subfloat[\centering Pantalla de dashboard con las opciones de gestión disponibles para el profesor.]{{\includegraphics[width=0.35\textwidth]{imagenes/c7/dashboard.png} }}%
+  \subfloat[\centering Pantalla de dashboard con las opciones de gestión disponibles para el administrador.]{{\includegraphics[width=0.35\textwidth]{imagenes/c7/dashboard.png} }}%
   \qquad
   \subfloat[\centering Composición de la pantalla de dashboard.]{{ \includegraphics[width=0.35\textwidth]{imagenes/c7/dashboardcompo.png} }}%
   \caption{Vista del dashboard}%
