--- a/Memoria/prefacios/prefacio.tex
+++ b/Memoria/prefacios/prefacio.tex
@@ -66,7 +66,7 @@ consultada por las personas que lo deseen.
 \vspace{2cm}
 
 \begin{flushright}
-Granada a 12 de Julio de 2023.
+Granada a 10 de Julio de 2023.
 \end{flushright}
 
 
@@ -94,7 +94,7 @@ que corresponda.
 
 \vspace{0.5cm}
 
-Y para que conste, expiden y firman el presente informe en Granada a 12 de Julio de 2023 .
+Y para que conste, expiden y firman el presente informe en Granada a 10 de Julio de 2023 .
 
 \vspace{1cm}
 
@@ -109,10 +109,12 @@ Y para que conste, expiden y firman el presente informe en Granada a 12 de Julio
 
        \vspace{1cm}
 
-A mi madre, por su apoyo incondicional y por creer siempre en mí. 
+A mi madre, por su apoyo incondicional, por creer siempre en mí y por darme la oportunidad de estudiar lo que me gusta.
 
-A mi padre, porque aunque no esté aquí sé que estaría orgulloso de lo que he conseguido. 
+A mi padre, porque aunque no esté aquí sé que estaría orgulloso de lo que he conseguido estos años.
 
 A Migue, mi pareja, por su paciencia durante los años de carrera y darme ánimos cuando más lo necesitaba. 
 
-A Luis López, mi tutor, por su ayuda y consejos durante el desarrollo de este proyecto. 
+A todas mis amistades, por ayudarme a desconectar siempre que me hacía falta.
+
+A Luis López, mi tutor, por su ayuda y sus consejos durante el desarrollo de este proyecto. 
