Bibliografía casi terminada

--- a/Memoria/capitulos/02_EstadoDelArte.tex
+++ b/Memoria/capitulos/02_EstadoDelArte.tex
@@ -21,7 +21,7 @@ detallarán las aplicaciones más destacadas encontradas:
 Duolingo es una de las aplicaciones más populares que existen para aprender idiomas. Esta aplicación se basa en el método
 de aprendizaje por inmersión y en la gamificación: el usuario estudia el idioma mediante una serie de actividades lúdicas.
 Aunque su principal motivación es la enseñanza de hablar y escribir en un idioma, también se incluyen actividades de
-comprensión auditiva, de lectura y de vocabulario.
+comprensión auditiva, de lectura y de vocabulario. ~\cite{duolingo}
 \newpage
 La aplicación se divide en lecciones, las cuales contienen una serie de ejercicios (Figura \ref{fig:duolingo}) que el usuario debe
 completar para ir avanzando por las distintas secciones.
@@ -47,7 +47,7 @@ Por último, cabe destacar que esta aplicación es gratuita (aunque ofrece funci
 
 
 \subsubsection{Artly}
-Artly es una aplicación móvil que permite aprender cientos de obras de arte de forma interactiva. De forma parecida a Duolingo, 
+Artly es una aplicación móvil que permite aprender cientos de obras de arte de forma interactiva ~\cite{artly}. De forma parecida a Duolingo, 
 cuando el usuario abre la aplicación, se encuentra una lista de secciones (Figura \ref{fig:artly}) correspondientes a los distintos movimientos 
 artísticos. Estos apartados se irán desbloqueando uno a uno a medida que el usuario vaya completando las lecciones y ejercicios.
  
@@ -70,7 +70,7 @@ La aplicación es gratuita pero tiene mejoras de pago que te permitirán avanzar
 
 
 \subsubsection{BMath}
-BMath es un software para móviles para el aprendizaje de conceptos matemáticos mediante gamificación. Esta aplicación crea un programa personalizado para el
+BMath es un software para móviles para el aprendizaje de conceptos matemáticos mediante gamificación ~\cite{bmath}. Esta aplicación crea un programa personalizado para el
 usuario en función del curso académico en el que esté, adaptándose a su conocimiento y a su nivel. Pese a ser gratuita, el tiempo diario que te permite el
 modo básico es de 5 mintuos, mientras que si pagas te permitirá ampliarlo en 10 minutos cada día. 
 
@@ -111,7 +111,7 @@ de conocimientos musicales o a la ayuda a aprender a tocar un instrumento musica
 
 
 \subsubsection{Curso de Lenguaje Musical}
-Esta herramienta para móvil tiene el objetivo de enseñar los conceptos básicos de lenguaje musical. La aplicación proporciona una forma de aprendizaje muy 
+Esta herramienta para móvil tiene el objetivo de enseñar los conceptos básicos de lenguaje musical ~\cite{curlenmusi}. La aplicación proporciona una forma de aprendizaje muy 
 tradicional y que no está basada en la gamificación, ya que no dispone de ningún tipo de seguimiento del progreso ni de ejercicios para realizar sobre las lecciones aprendidas.
 La app contiene una lista de lecciones (Figura \ref{fig:clm}) y cada una de ellas muestra un vídeo de un docente explicando el contenido del temario. 
 
@@ -127,7 +127,7 @@ a los vídeos de las lecciones sin ningún tipo de decoración o imagen.
 
 
 \subsubsection{Sonid}
-Sonid consiste en una aplicación para el aprendizaje de piano a través de la gamificación.
+Sonid consiste en una aplicación para el aprendizaje de piano a través de la gamificación ~\cite{Sonid}.
 La aplicación se divide en distintas lecciones (Figura \ref{fig:sonid2}) que el usuario irá desbloqueando al pasarlas correctamente.
 Cada lección explica unos conceptos básicos de música y piano y, al finalizar, el usuario deberá realizar una serie
 de ejercicios para comprobar que ha entendido y aprendido el contenido del temario.
@@ -171,7 +171,7 @@ existen numerosas opciones que se pueden utilizar. En este apartado se muestran 
 
 \caption{Logo de Flutter}
 \end{wrapfigure}Flutter es un kit de desarrollo software (framework) de código abierto destinado al desarrollo de aplicaciones móviles multiplataforma. Está programado en Dart, fue creado por Google y su primera versión estable se lanzó en 2018.
-Se emplea para desarrollar aplicaciones para móvil, web y escritorio desde una sola base de código, lo cual permite mucha más agilidad y consistencia.
+Se emplea para desarrollar aplicaciones para móvil, web y escritorio desde una sola base de código, lo cual permite mucha más agilidad y consistencia ~\cite{flutter}. 
 
 Flutter ofrece tres ventajas respecto a otros frameworks utilizados para el desarrollo de aplicaciones multiplataformas:
 
@@ -185,7 +185,7 @@ Flutter está basado en el concepto de widgets, que son los elementos que compon
 dinámicamente, permitiendo una gran flexibilidad a la hora de crear interfaces gráficas. 
 
 \subsection{React Native}
-Framework de código abierto creado por Meta Platforms (Facebook) y destinado al desarrollo de aplicaciones muliplataforma para Android, iOS, Web, Windows, etc.
+Framework de código abierto creado por Meta Platforms (Facebook) y destinado al desarrollo de aplicaciones muliplataforma para Android, iOS, Web, Windows, etc ~\cite{reactnative}.
 Está basado en Javascript como lenguaje de programación y en React como herramienta para la interfaz de usuario. La diferencia con React es que, en lugar de 
 trabajar con el navegador, trabaja con las plataformas móviles al transformar los componentes en nativos en función de la plataforma en la que se esté
 ejecutando la aplicación. 
@@ -197,7 +197,6 @@ ejecutando la aplicación.
     
 Esta tecnología permite construir aplicaciones móviles usando solamente Javascript, con el mismo diseño que utiliza
 React permitiendote realizar una interfaz de usuario completa mediante componentes. 
-
 
 
 
@@ -234,7 +233,7 @@ Dart posee las siguientes ventajas:
 \end{itemize}
 
 \subsection{Kotlin}
-Kotlin es un lenguaje de programación construido sobre Java, desarrollado por JetBrains y lanzado en 2016.
+Kotlin es un lenguaje de programación construido sobre Java, desarrollado por JetBrains y lanzado en 2016 ~\cite{kotlin}.
 Es orientado a objetos y tiene tipado estático, pero también soporta la programación por procedimientos y funciones. 
 \newpage
 Algunas de sus ventajas son:
@@ -250,7 +249,7 @@ Algunas de sus ventajas son:
 \subsection{NodeJS}
 NodeJS es un entorno en tiempo de ejecución de código abierto, del lado del servidor y programado en Javascript. 
 Es asíncrono y dirigido por eventos. Node es utilizado para el desarrollo de aplicaciones de red escalables y rápidas, ofreciendo beneficios
-en rendimiento, velocidad de desarrollo, etc. 
+en rendimiento, velocidad de desarrollo, etc ~\cite{nodejs}. 
 
 Se utiliza en el desarrollo de aplicaciones web porque permite ejecutar Javascript del lado del servidor en lugar de en el navegador. 
 
@@ -265,7 +264,7 @@ Los principales motivos para utilizar NodeJS son:
 
 \subsection{React}
 React es una biblioteca Javascript de código abierto que se utiliza para la creación de interfaces de usuario de forma fácil y sencilla.
-Es mantenida por una gran comunidad de desarrolladores de software libre y fue lanzada en 2013. 
+Es mantenida por una gran comunidad de desarrolladores de software libre y fue lanzada en 2013 ~\cite{react}. 
 
 En React se trabaja con componentes, los cuales son elementos o partes de la interfaz de usuario que facilitarán la reutilización de código y la modularidad.
 \newpage
@@ -278,13 +277,13 @@ Entre las ventajas de React encontramos:
 
 \subsection{Angular}
 Angular es un framework de código abierto para el desarrollo de aplicaciones web y móviles. Está basado en TypeScript y está desarrollado por Google.
-Esta tecnología también está basada en componentes, lo cual permite la creación de aplicaciones web escalables
+Esta tecnología también está basada en componentes, lo cual permite la creación de aplicaciones web escalables ~\cite{angular}.
 
 \subsection{MongoDB}
 MongoDB es una base de datos no relacional de código abierto y orientada a documentos. 
 Es de tipo NoSQL, es decir, que no utiliza el modelo relacional de bases de datos tradicionales.
 Cada registro de la base de datos es un documento que consta de pares clave - valor (muy similar a los objetos JSON).
-Está escrito en C++ y las consultas se hacen pasando objetos JSON como parámetros.
+Está escrito en C++ y las consultas se hacen pasando objetos JSON como parámetros ~\cite{mongodb}.
 
 MongoDB proporciona las siguientes ventajas:
 \begin{itemize}
@@ -300,7 +299,7 @@ MongoDB proporciona las siguientes ventajas:
 
 \subsection{Pilas MERN \& MEAN}
 MERN es un conjunto de tecnologías que se utilizan para el desarrollo de aplicaciones web. Está compuesto por las siglas de MongoDB, Express (ayuda para crear y gestionar el backend en Node), React y NodeJS. MEAN es igual, pero sustituye React por
-Angular. 
+Angular ~\cite{mern}.
 
 Hay una gran cantidad de beneficios al utilizar una de estas pilas para desarrollar una aplicación web como por ejemplo:
 \begin{itemize}
@@ -320,7 +319,7 @@ Hay una gran cantidad de beneficios al utilizar una de estas pilas para desarrol
 \subsection{MariaDB}
 MariaDB es un sistema de gestión de bases de datos relacional de código abierto. Es un fork de MySQL y está desarrollado por su comunidad de usuarios. Surgió en 2009 como
 consecuencia de la compra de MySQL por parte de Sun Microsystems.
-Sigue un modelo relacional, lo cual significa que el contenido de los datos se almacena en tablas con un esquema más rígido que en MongoDB u otra base de datos noSQL.
+Sigue un modelo relacional, lo cual significa que el contenido de los datos se almacena en tablas con un esquema más rígido que en MongoDB u otra base de datos noSQL ~\cite{mariadb}.
 
 
 \begin{figure}[H]
