--- a/Memoria/capitulos/03_Requisitos.tex
+++ b/Memoria/capitulos/03_Requisitos.tex
@@ -102,7 +102,7 @@ de hecho, las lecciones pueden ser bastante básicas y sencillas para las person
 
 Las restricciones del sistema a desarrollar son:
 \begin{itemize}
-    \item La aplicación del cliente estará desarrollada en Flutter y/o Dart y para la del servidor se utilizará NodeJS con Express.
+    \item La aplicación del cliente estará desarrollada en Flutter y/o Dart y para la del servidor se utilizará NodeJS con Express ~\cite{express}.
     \item Se utilizarán las consultas, inserciones, modificaciones y borrados de MongoDB para la base de datos, usando un modelo no relacional.
     \item Al hacer uso de librerías externas para desarrollar algunas de las funciones, el rendimiento y las limitaciones hardware pueden depender de estas.
 \end{itemize}
