--- a/Memoria/capitulos/04_Planificacion.tex
+++ b/Memoria/capitulos/04_Planificacion.tex
@@ -8,7 +8,7 @@ Para ello, se utilizarán ciertos elementos de la metodología SCRUM, el cual de
 
 
 \subsection*{SCRUM}
-SCRUM es un marco de trabajo iterativo e incremental que se utiliza para desarrollar proyectos de software.
+SCRUM es un marco de trabajo iterativo e incremental que se utiliza para desarrollar proyectos de software ~\cite{scrum}.
 Este marco de trabajo se basa en la idea de que el desarrollo de software es un proceso complejo que se adapta continuamente
 a las circunstancias. Por ello, se divide en pequeñas iteraciones que se van realizando de forma incremental y utiliza una serie de elementos
 para poder controlar el desarrollo del proyecto:
