--- a/Memoria/capitulos/08_Pruebas.tex
+++ b/Memoria/capitulos/08_Pruebas.tex
@@ -9,7 +9,7 @@ Para realizar las pruebas se han utilizado los siguientes paquetes:
 
 \begin{itemize}
     \item \textbf{flutter\_test}: paquete que contiene las clases necesarias para realizar las pruebas de unidad.
-    \item \textbf{nock}: paquete que permite simular las peticiones HTTP realizadas por la aplicación y devolver una respuesta simulada
+    \item \textbf{nock}: paquete que permite simular las peticiones HTTP realizadas por la aplicación y devolver una respuesta simulada ~\cite{nockpackage}. 
     \item \textbf{flutter\_driver}: paquete que contiene las clases necesarias para realizar las pruebas de integración. 
 \end{itemize}
 
