--- a/Memoria/proyecto.tex
+++ b/Memoria/proyecto.tex
@@ -28,6 +28,7 @@
 \usepackage{tabularx}
 \usepackage{hhline}
 \usepackage[pdfborder={0 0 0}]{hyperref} %referencia
+\usepackage{cite}
 
 % ********************************************************************
 % Re-usable information
@@ -214,6 +215,11 @@
    \input{capitulos/08_Pruebas}
    
    \input{capitulos/09_Conclusion}
+
+   \input{capitulos/10_Bibliografia}
+
+  % \input{capitulos/10_Bibliografia}
+
 %
 %%\chapter{Conclusiones y Trabajos Futuros}
 %
